Fixed saving Program Setup data for non-active orgs (#3932)
Fixed unnecessary scrollbars
Removed invalid `brief=true` arguments

--- a/seed/static/seed/scss/style.scss
+++ b/seed/static/seed/scss/style.scss
@@ -4478,7 +4478,7 @@ ul.r-list {
 
   &.r-scrollable {
     max-height: 200px;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
 
